--- a/app/templates/nav_base.html
+++ b/app/templates/nav_base.html
@@ -16,8 +16,8 @@
         {% else %}
         <div class="hidden md:flex space-x-6 items-center">
             <a href="#" class="text-red-100 hover:text-red-300 transition">Home</a>
-            <a href="#" class="text-red-100 hover:text-red-300 transition">New Reserve</a>
-            <a href="#" class="text-red-100 hover:text-red-300 transition">Your Reserves</a>
+            <a href="{{ url_for('newReserve') }}" class="text-red-100 hover:text-red-300 transition">New Reserve</a>
+            <a href="{{ url_for('viewReserves') }}" class="text-red-100 hover:text-red-300 transition">Your Reserves</a>
             <a href="#" class="text-red-100 hover:text-red-300 transition">About</a>
             <a href="{{ url_for('logout') }}" class="text-red-100 hover:text-red-300 transition bg-red-800 p-2 rounded-lg">Logout</a>
         </div>
